fixed spinner and add contact button mobile

--- a/design/769-1024-tablet.css
+++ b/design/769-1024-tablet.css
@@ -606,7 +606,7 @@ h1 {
     border-radius: 46px;
     position: absolute;
     right: 40px;
-    bottom: 116px;
+    bottom: 186px;
 }
 
 .main-content-contacts-mobile {
